<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_notes"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:textSize="50dp"
            android:fontFamily="@font/bangers"
            android:text="@string/correct"
            android:layout_gravity="center"
            android:textColor="@color/colorBlackGrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAllCaps="true"
            android:text="+ 100"
            android:layout_gravity="center"
            android:textColor="@color/colorBlackGrey"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_next_game"
        android:layout_gravity="center"
        android:textColor="@color/white_melon"
        android:fontFamily="@font/bangers"
        android:text="@string/next_game"
        android:background="@drawable/gradient"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alert_dialog_close"
        android:textStyle="bold"
        android:text="@string/close"
        android:paddingTop="8dp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="right"/>

</LinearLayout>
</LinearLayout>