<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.triviaGame.FregmentResultTrivia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bangers"
            android:text="@string/incorrect_expresion"
            android:textSize="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bangers"
            android:text="@string/the_song_is" />
        <TextView
            android:id="@+id/rtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorBlackGrey"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:padding="20dp"
            android:elevation="1dp"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/rimagen"/>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/rbtnDisLike"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_dislike"
                android:backgroundTint="@color/colorBlackGrey"
                android:clickable="false" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ralbum"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:padding="10dp"
                    android:textColor="@color/colorBlackGrey" />
                <TextView
                    android:id="@+id/rartista"
                    android:layout_below="@id/ralbum"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/colorBlackGrey" />

            </RelativeLayout>
            <Button
                android:layout_toEndOf="@+id/rartista"
                android:id="@+id/rbtnFavor"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_heart"
                android:backgroundTint="@color/colorBlackGrey"
                android:clickable="false" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">/>




        </LinearLayout>

        <SeekBar
            android:id="@+id/rseekbar"
            android:layout_width="318dp"
            android:layout_height="25dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btnSeguirJugando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bangers"
            android:background="@drawable/gradient"
            android:textColor="@color/white_melon"
            android:text="@string/next_game"
            android:textSize="25dp" />
    </LinearLayout>

</ScrollView>